--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -8,6 +8,7 @@ overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
+
 plugins:
   - react
 
@@ -27,3 +28,4 @@ rules:
   react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
   testing-library/no-debug: 0
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
+  arrow-body-style: ["error", "as-needed"]
