--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -29,3 +29,4 @@ rules:
   testing-library/no-debug: 0
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
   arrow-body-style: ["error", "as-needed"]
+  no-param-reassign: ["error", { "props": false }]
