--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,16 @@
     "bootstrap": "^5.3.2",
     "classnames": "^2.5.1",
     "formik": "^2.4.5",
+    "i18next": "^23.10.1",
+    "leo-profanity": "^1.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "socket.io-client": "^4.7.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
