--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -29,5 +29,10 @@ rules:
   testing-library/no-debug: 0
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
   arrow-body-style: ["error", "as-needed"]
-  no-param-reassign: ["error", { "props": false }]
+  no-param-reassign: ['error', {
+      props: true,
+      ignorePropertyModificationsFor: [
+        'state',
+      ]
+    }]
   react/jsx-one-expression-per-line: 0
