Update eslint rules

--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -1,16 +1,22 @@
 env:
   browser: true
   es2021: true
+
 extends:
-  - plugin:react/recommended
   - airbnb
-overrides: []
+  - plugin:react/recommended
+  - plugin:functional/recommended
+  - plugin:react-hooks/recommended
+
 parserOptions:
+  ecmaFeatures:
+    jsx: true
   ecmaVersion: latest
   sourceType: module
 
 plugins:
   - react
+  - functional
 
 rules:
   import/extensions: 0
@@ -28,9 +34,4 @@ rules:
   react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
   testing-library/no-debug: 0
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
-  arrow-body-style: ["error", "as-needed"]
-  no-param-reassign: ['error', {
-      props: true,
-      ignorePropertyModificationsFor: [ 'state', ]
-    }]
-  react/jsx-one-expression-per-line: 0
+  
